        Fixed:
            - ...


#Changelog

Unreleased:
    - Add file menu [2]
    - Add file tabs [1]
    - Fix flickering of text while scaling [3]
    - Add mouse scrolling [1]
    - Add selection tool [1]
    - Add extended ASCII support [1]
    - Change display system, line->char [1]
    - Add cmake, clang and GNU make support [1]
    - Add line over multiple lines feature [2]

Version 0.9 - 16.10.2021
    Subversion 0.9 - 16.10-2021 @ 737464
        Added:
            - main.cpp
            - definitions.hpp
            - fileIO.hpp
            - text.hpp
            - window.hpp
            - Makefile
        Changed:
        Deprecated:
        Removed:
        Fixed:

Version 1.0 - 17.10.2021
    Subversion 1.0 - 17.10.2021 @ 737464
        Added:
            - Cursor scrolling
            - 'SOL' and 'FN_DELETE' definition
            - Delete character after cursor
            - function to text.hpp
            - Possibility to show additional information
        Changed:
            - Text display function
        Deprecated:
        Removed:
        Fixed:
            - Cursor moving to wrong position
            - Tab handling issue
    Subversion 1.0.1 - 17.10.2021 @ 737464
        Added:
        Changed:
        Deprecated:
        Removed:
        Fixed:
            - mouse cursor position bug

    Subversion 1.0.2 - 17.10.2021 @ 737464
        Added:
            - File renaming
            - Definitions
        Changed:
            - Mouse input processing function
        Removed:
        Fixed:

        Subversion 1.0.2.5 - 17.10.2021 @ 737464
            Added:
                - new file name change confirm method
            Changed:
            Removed:
            Fixed:

    Subversion 1.0.3 - 18.10.2021 @ 737464
        Added:
            - Definition
        Changed:
        Removed:
        Fixed:
            - renaming bug

    Subversion 1.0.4 - 18.10.2021 @ 737464
        Added:
            - Coding feature
        Changed: